--- a/build.gradle
+++ b/build.gradle
@@ -17,9 +17,9 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "1.0"
-group= "net.jam-craft.LASER" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "LASER"
+version = "0.4"
+group= "net.jam-craft.flowstone" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = "Flowstone"
 
 minecraft {
     version = "1.7.2-10.12.1.1065"
